# misc/openapi-generator-configs/openapi-generator-api/api.yaml
@@ -84,6 +84,10 @@ components:
                 type: string
         omitInfoDescription:
           type: boolean
+        omitModelDocumentation:
+          type: boolean
+        omitApiDocumentation:
+          type: boolean
         setSkipSerializationToTrueByDefault:
           type: boolean
         includeFetchAdapter:
